--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -244,7 +244,7 @@
         font-size: 18px;
         color: #2d4473;
         margin: 10px 0;
-        cursor: url(../../assets/images/curseur-patte.png), auto;
+        cursor: url(../images/curseur-patte.png), auto;
     }
 
 }
