--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -21,10 +21,7 @@
 
 .sectionpadding{
     padding: 18px;
-}
 
-.custom-cursor{
-    cursor: url(../images/curseur-patte.png), auto;
 }
 
 .introduction{
@@ -37,32 +34,33 @@
     width: 100%;
     height: auto;
     position: relative;
-    left: 0;
-    transition: left 0.3s ease-out;
 }
 
 
-
 .image__content{
-    margin: 20px 0;
     width: 100%;
+    height: auto;
+}
+
+.image__rencontres{
+    width: 25%;
     height: auto;
 }
 
 
 
-  .btn-experience {
+.btn-experience {
     font-family:'Cabin', sans-serif ;
     text-align: center;
     background-color: var(--color-primary);
     margin: 40px 0;
-    padding: 8px 12px; 
+    padding: 10px 25px; 
     border-radius: 20px;
     color: var(--color-bg);
     text-decoration: none;
 }
 
-.bouton--style :hover{
+.btn-experience :hover{
     background-color: var(--color-bg);
     color: var(--color-primary);
 }
@@ -71,10 +69,6 @@
     background-color: var(--color-secondary);
 }
 
-.rencontres{
-    display: flex;
-    align-content: center;
-}
 
 .more{
     background-color: #2d4473;
@@ -89,21 +83,30 @@
     background-color: var(--color-fourth);
 }
 
+.slider__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modules{
+    align-items: center;
+}
 
 .icone{
-    width: 130%;
+    width: 20%;
     height: auto;
 }
 
 .img__slide{
-    width: 80%;
-    height: auto;
-    margin: 30px 0;
+    width: 30%;
+    height: 30%;
 }
 
 .motivation{
     padding: 0;
 }
+
 
 
 /* scroll up bouton */
@@ -227,7 +230,7 @@
 @media screen and (min-width: 1025px) {
 
     .image__content{
-        width: 60%;
+        width: 100%;
         height: auto;
         margin: 0;
     }
@@ -244,7 +247,6 @@
         font-size: 18px;
         color: #2d4473;
         margin: 10px 0;
-        cursor: url(../images/curseur-patte.png), auto;
     }
 
 }
