--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -72,7 +72,7 @@
   position: fixed;
   left: 0;
   height: 92vh;
-  top: 10vh;
+  top: 11vh;
   background-color: var(--color-primary);
   width: 50vw; }
 
@@ -196,10 +196,18 @@
 .solutions {
   background-color: var(--color-fourth); }
 
-.slider__container {
+section figure {
+  display: flex;
+  justify-content: center; }
+
+.slider .souscontent {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center; }
+
+.slider .more {
+  width: 80vw; }
 
 .modules {
   align-items: center; }
@@ -450,3 +458,6 @@
     color: var(--color-bg); } }
 
 /* slider */
+.slider__container {
+  width: 100%;
+  margin: auto; }
