--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -176,11 +176,14 @@
   padding: 10px 25px;
   border-radius: 20px;
   color: var(--color-bg);
-  text-decoration: none; }
+  text-decoration: none;
+  align-items: center; }
 
-.btn-experience :hover {
+.btn-experience:hover {
   background-color: var(--color-bg);
-  color: var(--color-primary); }
+  color: var(--color-primary);
+  border: solid var(--color-primary) 2px;
+  border-radius: 20px; }
 
 .motivation {
   background-color: var(--color-secondary); }
@@ -206,8 +209,11 @@ section figure {
   justify-content: center;
   align-items: center; }
 
+.slider {
+  margin: 20px; }
+
 .slider .more {
-  width: 80vw; }
+  width: 100%; }
 
 .modules {
   align-items: center; }
@@ -333,14 +339,108 @@ section figure {
     font-weight: 600;
     font-size: 18px;
     color: #2d4473;
-    margin: 10px 0; } }
+    margin: 10px 0; }
+  .image__rencontres {
+    padding-top: 17%;
+    width: 40%;
+    height: auto; }
+  .rencontres {
+    background-image: url(../images/fond-pattes.svg); }
+  .solutions {
+    background-image: url(../images/fond-pattes-blanc.svg); }
+  .icone {
+    width: 5%; }
+  .img__slide {
+    width: 15%; }
+  .slider__container {
+    max-width: 90vw; }
+  .slider {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 3vh;
+    height: fit-content;
+    margin: 20px;
+    place-items: center; }
+  .slider .slides-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 10px;
+    width: 80%; }
+  .slider .slides-image img {
+    height: 100%;
+    width: 60%;
+    object-fit: contain; }
+  .slider .slides-content img {
+    width: 15%; }
+  .slick-arrow::before {
+    font-size: 40px !important;
+    height: 10vh !important;
+    width: 10vh !important;
+    color: #2d4473 !important; } }
 
 /* css grid*/
-.content {
-  display: grid;
-  grid-column-gap: 18px;
-  max-width: 100%;
-  margin: auto; }
+@media screen and (min-width: 1024px) {
+  .nav__header {
+    width: 25vw; }
+  .content {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-column-gap: 18px;
+    grid-row-gap: 15px;
+    max-width: 100%; }
+  .grid-start01 {
+    grid-column-start: 1; }
+  .grid-start02 {
+    grid-column-start: 2; }
+  .grid-start03 {
+    grid-column-start: 3; }
+  .grid-start04 {
+    grid-column-start: 4; }
+  .grid-start05 {
+    grid-column-start: 5; }
+  .grid-start06 {
+    grid-column-start: 6; }
+  .grid-start07 {
+    grid-column-start: 7; }
+  .grid-end02 {
+    grid-column-end: 2; }
+  .grid-end03 {
+    grid-column-end: 3; }
+  .grid-end04 {
+    grid-column-end: 4; }
+  .grid-end05 {
+    grid-column-end: 5; }
+  .grid-end06 {
+    grid-column-end: 6; }
+  .grid-end07 {
+    grid-column-end: 7; }
+  .grid-end {
+    grid-column-end: -1; }
+  .row-start01 {
+    grid-row-start: 1; }
+  .row-start02 {
+    grid-row-start: 2; }
+  .row-start03 {
+    grid-row-start: 3; }
+  .row-start04 {
+    grid-row-start: 4; }
+  .row-start05 {
+    grid-row-start: 5; }
+  .row-start06 {
+    grid-row-start: 6; }
+  .row-end02 {
+    grid-row-end: 2; }
+  .row-end03 {
+    grid-row-end: 3; }
+  .row-end04 {
+    grid-row-end: 4; }
+  .row-end05 {
+    grid-row-end: 5; }
+  .row-end {
+    grid-row-end: -1; } }
 
 .title {
   font-family: 'Cabin', sans-serif;
@@ -430,7 +530,7 @@ section figure {
   .txt__content {
     font-family: 'Quicksand', sans-serif;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1.5;
     color: var(--color-text);
     margin: 30px 0; }
