--- a/assets/style/_body.scss
+++ b/assets/style/_body.scss
@@ -30,6 +30,7 @@
     margin-bottom: 25px;
 }
 
+
 .image__intro{
     width: 100%;
     height: auto;
@@ -40,6 +41,7 @@
 .image__content{
     width: 100%;
     height: auto;
+    position: relative;
 }
 
 .image__rencontres{
@@ -47,9 +49,13 @@
     height: auto;
 }
 
-
+.bouton{
+    margin: 0% 20%;    
+}
 
 .btn-experience {
+    display: flex;
+    justify-content: center;
     font-family:'Cabin', sans-serif ;
     text-align: center;
     background-color: var(--color-primary);
@@ -58,8 +64,8 @@
     border-radius: 20px;
     color: var(--color-bg);
     text-decoration: none;
-    align-items: center;
 }
+
 
 .btn-experience:hover{
     background-color: var(--color-bg);
@@ -90,6 +96,10 @@ section figure{
     justify-content: center;
 }
 
+.slider{
+    margin: 20px;
+}
+
 .slider .souscontent{
     display: flex;
     flex-direction: column;
@@ -97,32 +107,33 @@ section figure{
     align-items: center;
 }
 
-.slider{
-    margin: 20px;
-}
+.slider__container{
+    margin: auto;
+  }
 
 .slider .more{
-    width: 100%;
+    width: 90%;
 }
-
-
 
 .modules{
     align-items: center;
 }
 
+.slides-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .icone{
-    width: 20%;
+    width: 15%;
     height: auto;
+    margin-top: 10px;
 }
 
 .img__slide{
     width: 30%;
     height: 30%;
-}
-
-.motivation{
-    padding: 0;
 }
 
 
@@ -133,14 +144,14 @@ section figure{
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     background-color: #CECCCC;
     border-radius: 50%;
     border: none;
     cursor: pointer;
     z-index: 9999;
-    opacity: 70%;
+    opacity: 60%;
   }
   
   .scroll-up-button img {
@@ -154,7 +165,7 @@ section figure{
 .footer{
     background-color: var(--color-primary);
     color: var(--color-bg);
-    margin-top: 108px;
+    margin-top: 20%;
     text-align: center;
 }
 
@@ -176,11 +187,15 @@ section figure{
 }
 
 .footer__el{
-    display: flex;
     align-items: center;
     flex-direction: row;
     justify-content: space-evenly;
     margin: 18px;
+}
+
+.nav__footer{
+    display: flex;
+    flex-direction: row;
 }
 
 .nav__footer--el{
@@ -245,7 +260,56 @@ section figure{
     align-items: center;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px){
+
+    .logo__intro{
+        width: 60vw;
+        margin: 0 auto;
+    }
+
+    .image__intro{
+        width: 50vw;
+    }
+
+    .image__content{
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+
+    .img__tab{
+        margin-top: 30%;
+    }
+    
+    .image__rencontres{
+        width: 50%;
+        height: auto;
+        margin-top: 40%;
+    }
+
+    .icone{
+        width: 10%;
+    }
+
+    .footer{
+        margin-top: 10%;
+    }
+
+}
+
 @media screen and (min-width: 1025px) {
+
+    .logo__intro{
+        width: 70%;
+    }
+
+    .content .introduction{
+        width: 90vw;
+    }
+
+    .bouton{
+        margin-top: 70%;
+    }
 
     .image__content{
         width: 100%;
@@ -274,10 +338,13 @@ section figure{
     }
 
     .rencontres{
+        padding: 0;
         background-image: url(../images/fond-pattes.svg);
+
     }
 
     .solutions{
+        padding: 0;
         background-image: url(../images/fond-pattes-blanc.svg);
     }
 
@@ -290,7 +357,7 @@ section figure{
     }
 
     .slider__container{
-        max-width: 90vw;
+        max-width: 85vw;
     }
 
     .slider{
@@ -312,6 +379,7 @@ section figure{
         width: 80%;
     }
 
+
     .slider .slides-image img{
         height: 100%;
         width: 60%;
@@ -330,5 +398,8 @@ section figure{
         color: #2d4473 !important;
     }
 
+    .footer{
+        margin-top: 7%;
+    }
 
 }
