--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,7 +1,7 @@
 /* Burger menu*/
 
 .header{
-    max-width: 980px;
+    max-width: 100vw;
     margin: auto;
 }
 
@@ -77,7 +77,7 @@
     position: fixed;
     left: 0;
     height: 92vh;
-    top: 11vh;
+    top: 14vh;
     background-color: var(--color-primary);
     width: 50vw;
 }
