--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -68,7 +68,8 @@
 .list__details--el{
     margin: 30px;
     font-family: 'Quicksand', sans-serif;
-    font-size: 14px;   
+    font-size: 16px;
+    font-weight: 500;   
 }
 
 .title--color{
@@ -79,7 +80,79 @@
     color: var(--color-bg);
 }
 
+.footer{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+}
 
+@media screen and (min-width: 768px) and (max-width: 1024px){
+
+    .title--big{
+        color: var(--color-primary);
+        font-size: 38px;
+        font-weight: 600;
+        margin: 0;
+    }
+    
+    .title--medium{
+        color: var(--color-secondary);
+        font-size: 28px;
+        margin-top: 40px;
+    }
+    
+    .title--small{
+        color: var(--color-text);
+        font-size: 22px;
+        padding-top: 30px;
+    }
+    
+    .mini--title{
+        color: var(--color-text);
+        font-family: 'Quicksand', sans-serif;
+        font-size: 20px;
+        margin: 10px 0;
+        text-align: center;
+    }
+    
+    .txt__content{
+        font-family: 'Quicksand', sans-serif;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1.5;
+        color: var(--color-text);
+        margin: 30px 0;
+    }
+    
+    .txt__details{
+        font-family: 'Quicksans', sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        color: var(--color-bg);
+        margin: 30px 0;
+    }
+    
+    
+    .sum__title{
+        font-family: 'Cabin', sans-serif;
+    }
+    
+    .list__details--el{
+        margin: 30px;
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 500;
+        font-size: 16px;   
+    }
+    
+    .title--color{
+        color: var(--color-bg);
+    }
+    
+    .txt__content--color{
+        color: var(--color-bg);
+    }
+
+}
 
 
 @media screen and (min-width: 1025px){
@@ -89,8 +162,7 @@
         color: var(--color-primary);
         font-size: 44px;
         font-weight: 700;
-        margin: 40px 0;
-    
+        margin: 0;
     }
     
     .title--medium{
@@ -145,7 +217,8 @@
     .list__details--el{
         margin: 30px;
         font-family: 'Quicksand', sans-serif;
-        font-size: 14px;   
+        font-size: 16px;   
+        font-weight: 500;
     }
     
     .title--color{
