correction typo details

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -712,7 +712,7 @@ section figure {
   margin: 30px 0; }
 
 .txt__details {
-  font-family: 'Quicksans', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
