--- a/assets/style/_text.scss
+++ b/assets/style/_text.scss
@@ -47,7 +47,7 @@
 }
 
 .txt__details{
-    font-family: 'Quicksans', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
